dist/manifests/borg-manifests/fluentd-centralized/5fluentd-centralized.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fluentd-centralized
  namespace: kube-system
  labels:
    k8s-app: fluentd-centralized
    version: v3.0.0
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 3

  # selector:
  #  matchLabels:
  template:
    metadata:
      labels:
        k8s-app: fluentd-centralized
        version: v3.0.0
        kubernetes.io/cluster-service: "true"

      # annotations:
    spec:
      serviceAccountName: fluentd-centralized
      containers:
      - name: fluentd-centralized
        image: bossjones/fluentd-elasticsearch:v3.0.0
        imagePullPolicy: Always
        # command:

        volumeMounts:
        # fluentd work files; do not share with multiple instances
        - name: work
          mountPath: /work
          readOnly: false
        # log file store (if used)
        - name: log
          mountPath: /log
          readOnly: false
        
        - name: spool
          mountPath: /spool
          readOnly: false
        
        - name: config-volume
          mountPath: /etc/fluent/config.d
        
        - name: grok-patterns
          mountPath: /grok.d
        
        - name: templates-d
          mountPath: /templates.d
        

        resources:
          limits:
            cpu: ".2"
            memory: "100Mi"
          requests:
            cpu: "0.05"
            memory: "10Mi"
          

        securityContext:
          # SOURCE: https://docs.okd.io/latest/rest_api/apis-apps/v1beta2.Deployment.html
          privileged: true

        livenessProbe:
          tcpSocket:
            port: 24231
          initialDelaySeconds: 90
          timeoutSeconds: 10

        ports:
        - containerPort: 24231
          name: promths-mtr
          protocol: TCP
        - containerPort: 24220
          name: monitor-agnt
          protocol: TCP

      # sidecar disabled

      volumes:
      - name: work
        emptyDir: {}
      - name: spool
        emptyDir: {}
      # log file store (if used)
      # This is rsyslog-centralized-pvc on purpose, we'r trying to mount the pvc that rsyslog-centralized-pvc creates
      - name: log
        persistentVolumeClaim:
          claimName: rsyslog-centralized-pvc
      
      - name: config-volume
        configMap:
          name: fluentd-centralized-grokconfig-0-3-0
          # defaultMode: 0775
      
      - name: grok-patterns
        configMap:
          name: fluentd-centralized-grok-patterns-0-3-0
          # defaultMode: 0775
      
      - name: templates-d
        configMap:
          name: fluentd-centralized-elasticseach-template
      

      hostNetwork: True

      hostPID: True

      nodeSelector:
        beta.kubernetes.io/os: linux
